--- a/data/pve/loot_tables/equipment/projectiles.json
+++ b/data/pve/loot_tables/equipment/projectiles.json
@@ -246,6 +246,34 @@
                           "tag":"{Potion:\"minecraft:long_regeneration\"}"
                         }
                     ]
+                },
+                {
+                    "type": "item",
+                    "weight": 1,
+                    "name": "minecraft:enderpearl",
+                    "functions": [
+                        {
+                            "function": "set_count",
+                            "count": {
+                                "min": 1,
+                                "max": 3
+                            }
+                        }
+                    ]
+                },
+                {
+                    "type": "item",
+                    "weight": 1,
+                    "name": "minecraft:snowball",
+                    "functions": [
+                        {
+                            "function": "set_count",
+                            "count": {
+                                "min": 4,
+                                "max": 10
+                            }
+                        }
+                    ]
                 }
             ]
         }
