--- a/data/pve/loot_tables/equipment/projectiles.json
+++ b/data/pve/loot_tables/equipment/projectiles.json
@@ -250,7 +250,7 @@
                 {
                     "type": "item",
                     "weight": 1,
-                    "name": "minecraft:enderpearl",
+                    "name": "minecraft:ender_pearl",
                     "functions": [
                         {
                             "function": "set_count",
